m16 refactor